name:                haskell-topics
version:             0.1.0.0
synopsis:            send and receive messages from Kafka
description:         Please see README.md
homepage:            http://github.com/SamRoberts/haskell-topics#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Roberts
maintainer:          sam.roberts.1983@gmail.com
copyright:           BSD
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Topics
                       Network.Topics.Memory
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.6,
                       cereal >= 0.5.1,
                       containers >= 0.5.6,
                       lens >= 4.13,
                       milena >= 0.5.0,
                       operational >= 0.2.3,
                       text >= 1.2.0,
                       transformers >= 0.4.2
  default-language:    Haskell2010

test-suite haskell-topics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-topics
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamRoberts/haskell-topics
