name:                haskell-topics
version:             0.1.0.0
synopsis:            send and receive messages from Kafka
description:         Please see README.md
homepage:            http://github.com/SamRoberts/haskell-topics#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Roberts
maintainer:          sam.roberts.1983@gmail.com
copyright:           BSD
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Network.Topics
                       Network.Topics.Sync
                       Network.Topics.Kafka
                       Network.Topics.Raw
  build-depends:       base         >= 4.7,
                       bytestring   >= 0.10.6,
                       cereal       >= 0.5.1,
                       containers   >= 0.5.6,
                       free         >= 4.12,
                       lens         >= 4.13,
                       milena       >= 0.5.0,
                       mtl          >= 2.2.1,
                       operational  >= 0.2.3,
                       text         >= 1.2.0,
                       transformers >= 0.4.2

test-suite haskell-topics-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       haskell-topics ,
                       base             >= 4.7,
                       containers       >= 0.5.6,
                       QuickCheck       >= 2.8,
                       tasty            >= 0.11,
                       tasty-quickcheck >= 0.8,
                       tasty-hunit      >= 0.9,
                       transformers     >= 0.4.2


source-repository head
  type:     git
  location: https://github.com/SamRoberts/haskell-topics
